fix visible bug

--- a/src/components/BaseModal/BaseModal.module.scss
+++ b/src/components/BaseModal/BaseModal.module.scss
@@ -83,6 +83,7 @@
   border-top: 1px solid $color4;
   display: flex;
   justify-content: flex-end;
+  z-index: -1;
 }
 
 @media screen and (max-width: 700px) {
